--- a/pinterest/views/register.ejs
+++ b/pinterest/views/register.ejs
@@ -4,7 +4,8 @@
       <div class="w-full h-auto flex justify-center items-center space-y-3 items-center flex-col">
       <img class="w-10 inline-block" src="/images/pintlogo.png" alt="">
       <h1 class="text-3xl text-center text-zinc-700 font-semibold leading-none tracking-tight">Welcome to Pinterest</h1>
-      <form class="w-full p-4 text-sm space-y-4" action="">
+      <p class="text-zinc-700 mt-0">Find new ideas to try</p>
+      <form class="w-full p-4 text-sm space-y-6" action="">
         <div class="space-y-1">
         <label for="email">Email</label>
         <br>
@@ -14,11 +15,14 @@
         <label class="mt-1" for="password">Password</label>
         <br>
         <input class="w-full h-10 p-1 rounded-lg outline outline-zinc-300" type="password" placeholder="Create a password" name="password">
-        </div><br>
-        <a class="pt-2" href="#">Forgot your password?</a>
-      <button class="w-full bg-red-600 rounded-full h-10 text-white text-lg font-semibold" type="submit" name="login">Login</button>
+      </div>
+        <div class="space-y-1">
+        <div class="flex space-x-3"><label for="password">Birthdate </label><span class="flex justify-center items-center"><img class="w-4" src="/images/information-button.png" alt=""></span></div>
+        <input class="w-full h-10 p-1 rounded-lg outline outline-zinc-300" type="date" name="date">
+      </div>
+      <button class="w-full bg-red-600 rounded-full h-10 text-white text-lg font-semibold" type="submit" name="signup">Signup</button>
       <p class="text-center text-xs ">By continuing, you agreed to Pinterest's <b>Terms of Service and acknowledge</b> you've read our <b>Privacy Policy. Notice at collection.</b></p>
-      <div class="text-center text-xs">Don't have an account? <a href="/register"><b>Signup</b></a></div>
+      <div class="text-center text-xs">Already a member? <a href="/"><b>Login</b></a></div>
       </form>
       </div>
       
